--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: Cabinet;
+  src: url("fonts/CabinetGrotesk-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: CabinetBold;
+  src: url("fonts/CabinetGrotesk-Bold.ttf") format("truetype");
+}
