--- a/src/assets/style/circleStyle.css
+++ b/src/assets/style/circleStyle.css
@@ -1,4 +1,4 @@
-.text-ring [style*="--index"] {
+.text-ring [style*="--index"], .text-circle [style*="--index"] {
   /* In "ch" units */
   --inner-angle: calc((360 / var(--total)) * 1deg);
   --radius: calc((var(--character-width, 1) / sin(var(--inner-angle))) * -1ch);
@@ -14,6 +14,10 @@
 
 .dg :is(.cr.string, .cr.number) input[type="text"] {
   color: white;
+  line-height: 1;
+}
+.text-cirle .dg :is(.cr.string, .cr.number) input[type="text"] {
+  color: #0C0C0C;
   line-height: 1;
 }
 
