build 404 redirection and NotFound view

--- a/src/assets/style/circleStyle.css
+++ b/src/assets/style/circleStyle.css
@@ -40,3 +40,9 @@
   backdrop-filter: blur(4.8px);
   -webkit-backdrop-filter: blur(4.8px);
 }
+
+@supports not (top: calc(sin(1) * 1px)) {
+  .hero-circle-text, .contact-circle-text {
+    display: none;
+  }
+}
