move testemonials to js module and run prettier formatting

--- a/src/assets/style/circleStyle.css
+++ b/src/assets/style/circleStyle.css
@@ -42,7 +42,8 @@
 }
 
 @supports not (top: calc(sin(1) * 1px)) {
-  .hero-circle-text, .contact-circle-text {
+  .hero-circle-text,
+  .contact-circle-text {
     display: none;
   }
 }
